update wording, links, details in html/css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" href="favicon.ico" />
-    <title>Compositional, Automatic and Scalable ML</title>
+    <title>Composable, Automatic, and Scalable ML</title>
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
     <script src="js/ie-emulation-modes-warning.js"></script>
@@ -44,7 +44,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li>
-                  <a href="./pages/resources.html">
+                  <a href="#">
                     Resources
                   </a>
                 </li>
@@ -85,10 +85,10 @@
           <img
                 style="width:400px; "
                 src="assets/casl-text.png"
-                alt="asyml"
+                alt="CASL"
               />
           <h2 style="font-size:24px;">
-            CASL - Compositional, Automatic and Scalable ML
+            CASL - Composable, Automatic, and Scalable ML
           </h2>
           <p>
             <a
@@ -117,7 +117,7 @@
                 class="img-circle"
                 src="assets/adaptdl-text.png"
                 alt="adapt_dl"
-                height="55"
+                height="70"
               />
             </div>
 
@@ -251,7 +251,7 @@
                 class="img-circle"
                 src="assets/tuun.png"
                 alt="tuun"
-                height="55"
+                height="48"
               />
             </div>
 
@@ -845,8 +845,8 @@
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <!-- <p>&copy; 2018 Texar. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="http://wang-chenyu.github.io" target="blank"></a></p> -->
-		<p>Artwork, Logos of Texar and Forte designed by <a href="https://wang-chenyu.github.io/">Chenyu</a>, Stave Logo made by Xu Zeng and <a href="mailto:nagiifan713@gmail.com">Mu Cun</p>
-        <p>&copy; 2020 ASYML.</p>
+		<!--<p>Artwork, Logos of Texar and Forte designed by <a href="https://wang-chenyu.github.io/">Chenyu</a>, Stave Logo made by Xu Zeng and <a href="mailto:nagiifan713@gmail.com">Mu Cun</p>-->
+        <p>&copy; 2020 CASL.</p>
       </footer>
     </div>
     <!-- /.container -->
