update taglines, add blurb

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" href="favicon.ico" />
-    <title>Composable, Automatic, and Scalable ML</title>
+    <title>Composable, Automatic, and Scalable Learning</title>
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
     <script src="js/ie-emulation-modes-warning.js"></script>
@@ -88,7 +88,7 @@
                 alt="CASL"
               />
           <h2 style="font-size:24px;">
-            CASL - Composable, Automatic, and Scalable ML
+            Composable, Automatic, and Scalable Learning
           </h2>
           <p>
             <a
@@ -105,6 +105,17 @@
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+        <h2 style="font-size:18px; line-height:150%">
+        <p>
+            CASL provides a unified tookit for composable, automatic, and scalable
+            machine learning systems, including distributed training, resource-adaptive
+            scheduling, hyperparameter tuning, and compositional model construction.
+        </p>
+        </br>
+        </h2>
+    </div>
 
     <div class="container marketing">
       <!-- Three columns of text below the carousel -->
