Updating tutorial links to the proper pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <div class="ex-title">How to build a Vision Transformer</div>
                             <div class="ex-summary">Pytorch implementation of Vision Transformer</div>
                             <div class="ex-bottom">
-                                <a class="button ex-button" href="https://github.com/petuum" target="_blank">See Example</a>
+                                <a class="button ex-button" href="https://github.com/asyml/vision-transformer-pytorch" target="_blank">See Example</a>
                             </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                             <div class="ex-title">Adaptive Distributed Training with BERT</div>
                             <div class="ex-summary">Fine tune BERT classifier distributedly</div>
                             <div class="ex-bottom">
-                                <a class="button ex-button" href="https://github.com/petuum" target="_blank">See Example</a>
+                                <a class="button ex-button" href="https://github.com/asyml/texar-pytorch/tree/master/examples/bert#adaptive-distributed-training-using-adaptdl" target="_blank">See Example</a>
                             </div>
                         </div>
                     </div>
