Hide Contact section while details are determined, Update text copy to be more concise, add AAAI 2020 ASYML Tutorial to updates section.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <div class="header-nav">
                 <a href="#summary">CASL Learning</a>&#x2022;
                 <a href="#examples">Examples</a>&#x2022;
-                <a href="#updates">Updates</a>&#x2022;
+                <a href="#updates">Updates</a>
+                <!-- Contact info TBD &#x2022;
                 <a href="#contact">Contact</a>
+                -->
             </div>
         </header>
         <main>
@@ -103,7 +105,7 @@
                     <div class="hexagon active">
                         <div class="hex-content">
                             <div class="ex-heading">3</div>
-                            <div class="ex-title">How to scale a model across GPUs with minimal code modification?</div>
+                            <div class="ex-title">Scale across GPUs with Minimal Coding</div>
                             <div class="ex-summary">A novel TensorFlow training engine for distributed deep learning</div>
                             <div class="ex-bottom">
                                 <a class="button ex-button" href="https://petuum.github.io/autodist/usage/tutorials/getting-started.html" target="_blank">See Example</a>
@@ -203,7 +205,7 @@
                             <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
                         </div>
                         <div class="up-card-title">
-                            AAAI Conference on Artificial Intelligence (AAAI), 2021
+                            AAAI 2021
                         </div>
                         <div class="up-card-subtitle">
                             BANANAS: Bayesian Optimization with Neural Architectures for Neural Architecture Search
@@ -217,7 +219,7 @@
                             <img src="assets/updates/neurips_logo.png" alt="Neural Information Processing Systems (NeurIPS) logo">
                         </div>
                         <div class="up-card-title">
-                            Conference on Neural Information Processing Systems (NeurIPS), 2020
+                            NeurIPS 2020
                         </div>
                         <div class="up-card-subtitle">
                             A Study on Encodings for Neural Architecture Search
@@ -242,6 +244,20 @@
                         </div>
 
                     </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                        </div>
+                        <div class="up-card-title">
+                            AAAI 2020
+                        </div>
+                        <div class="up-card-subtitle">
+                            Tutorial: Modularizing Natural Language Processing
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://asyml.github.io/aaai_tutorial/" target="_blank">View Tutorial</a></div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <div class="footer">
@@ -257,12 +273,13 @@
                             <img src="assets/img/cmu.svg" alt="Carnegie Mellon University">
                         </div>
                     </section>
-                    <section id="contact" class="main-container">
+                    <!-- Contact info TBD <section id="contact" class="main-container">
                         <h2>Contact</h2>
                         <div style="margin-top: 20px;">
-                            <a class="button" href="mailto:casl-support@petuum.com?subject=CASL Support Inquiry">casl-support@petuum.com</a>
+                            <a class="button" href="mailto:">Email Us</a>
                         </div>
                     </section>
+                    -->
                 </div>
             </div>
         </main>
