Updating the copy to remove ML from CAS, fixing minor details in markup and css classes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CASL - An open toolkit for composable, automatic, and scalable learning</title>
-        <meta name="description" content="CASL is for machine learning in the real world. Composable ML to quickly assemble applications, Auto ML to automatically tune models, and Scalable ML to efficiently train large models. Partners include Petuum, Inc. and Carnegie Mellon University.">
+        <meta charset="utf=8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="CASL is for machine learning in the real world. Composable ML to quickly assemble applications, Auto ML to automatically tune models, and Scalable ML to efficiently train large models. Partners include Petuum, Inc. and Carnegie Mellon University.">
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/index.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700,800">
@@ -11,6 +11,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+        <title>CASL - An open toolkit for composable, automatic, and scalable learning</title>
     </head>
     <body>
         <header>
@@ -32,13 +33,13 @@
                     <img class="logo-main" src="assets/img/casl_logo-main.svg" alt="CASL">
                     <h1>An open toolkit for composable, automatic, and scalable learning</h1>
                     <div class="github-container"></div>
-                    <div class="row">
+                    <div class="flex-row">
                         <div class="col">
                             <div class="csl-logo">
                                 <img src="assets/img/composable.svg" alt="Composable ML">
                             </div>
                             <div class="summary-title">
-                                Composable ML
+                                Composable
                             </div>
                             <div class="summary-desc">
                                 To quickly assemble your applications
@@ -49,7 +50,7 @@
                                 <img src="assets/img/auto.svg" alt="Auto ML">
                             </div>
                             <div class="summary-title">
-                                Auto ML
+                                Automatic
                             </div>
                             <div class="summary-desc">
                                 To automatically tune your models
@@ -60,7 +61,7 @@
                                 <img src="assets/img/scalable.svg" alt="Scalable ML">
                             </div>
                             <div class="summary-title">
-                                Scalable ML
+                                Scalable
                             </div>
                             <div class="summary-desc">
                                 To efficiently train your large models
@@ -68,7 +69,7 @@
                         </div>
                     </div>
                     <div class="summary-tag">For machine learning in the real world</div>
-                    <a class="button" href="https://github.com/petuum" target="_blank">Learn more</a>
+                    <a class="button" href="pages/casl-summary.html" target="_blank">Learn more</a>
                 </div>
             </section>
             <section id="examples">
@@ -261,7 +262,7 @@
                 </div>
             </section>
             <div class="footer">
-                <div class="row main-container">
+                <div class="flex-row main-container">
                     <section id="partners" class="main-container">
                         <h2>Partners</h2>
                         <div>
@@ -270,7 +271,9 @@
                             </a>
                         </div>
                         <div>
-                            <img src="assets/img/cmu.svg" alt="Carnegie Mellon University">
+                            <a href="https://www.cmu.edu">
+                                <img src="assets/img/cmu.svg" alt="Carnegie Mellon University">
+                            </a>
                         </div>
                     </section>
                     <!-- Contact info TBD <section id="contact" class="main-container">
