--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf=8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="CASL is for machine learning in the real world. Composable ML to quickly assemble applications, Auto ML to automatically tune models, and Scalable ML to efficiently train large models. Partners include Petuum, Inc. and Carnegie Mellon University.">
         <link rel="stylesheet" href="assets/css/normalize.css">
