Adding the old version of the CASL project page as the Learn More link and keeping it and its assets separate from the more minimal new homepage

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="summary-tag">For machine learning in the real world</div>
-                    <a class="button" href="pages/casl-summary.html" target="_blank">Learn more</a>
+                    <a class="button" href="pages/casl-summary.html">Learn more</a>
                 </div>
             </section>
             <section id="examples">
