Small updates include adding NNI under updates and adjusting some font sizes and borders quickly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="CASL is for machine learning in the real world. Composable ML to quickly assemble applications, Auto ML to automatically tune models, and Scalable ML to efficiently train large models. Partners include Petuum, Inc. and Carnegie Mellon University.">
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/index.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700,800">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -145,13 +145,15 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <!-- TBD <img src="assets/updates/" alt="alt"> -->
+                            <!--
+                            <img src="assets/updates/pollux_plot.png" alt="Pollux line plot showing favorable performance in relative job load (Average JCT hours) compared to Optimus+Oracle and Tiresias+TunedJobs">
+                            -->
                         </div>
                         <div class="up-card-title">
                             Pollux: Co-adaptive Cluster Scheduling for Goodput-Optimized Deep Learning
                         </div>
                         <div class="up-card-subtitle">
-                            In Submission
+                            <img src="assets/updates/pollux_plot.png" style="height: 110px" alt="Pollux line plot showing favorable performance in relative job load (Average JCT hours) compared to Optimus+Oracle and Tiresias+TunedJobs">
                         </div>
                         <div class="up-card-footer">
                             <div><a href="https://arxiv.org/abs/2008.12260" target="_blank">Full Paper</a></div>
@@ -257,6 +259,20 @@
                         </div>
                         <div class="up-card-footer">
                             <div><a href="https://asyml.github.io/aaai_tutorial/" target="_blank">View Tutorial</a></div>
+                        </div>
+                    </div>
+
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/nni.png" alt="NNI logo">
+                        </div>
+                        <div class="up-card-title">
+                            We have integrated AdaptDL with NNI for cost-effective hyperparameter tuning
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://nni.readthedocs.io/en/latest/TrainingService/AdaptDLMode.html" target="_blank">Details here</a></div>
                         </div>
                     </div>
                 </div>
