Adding new update for AAAI 2021 turoial

--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
                             <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
                         </div>
                         <div class="up-card-title">
-                            AAAI 2020
+                            AAAI 2020 Tutorial
                         </div>
                         <div class="up-card-subtitle">
                             Tutorial: Modularizing Natural Language Processing
                         </div>
                         <div class="up-card-footer">
-                            <div><a href="https://asyml.github.io/aaai_tutorial/" target="_blank">View Tutorial</a></div>
+                            <div><a href="https://asyml.github.io/aaai_tutorial/" target="_blank">Tutorial Page</a></div>
                         </div>
                     </div>
 
@@ -273,6 +273,20 @@
                         </div>
                         <div class="up-card-footer">
                             <div><a href="https://nni.readthedocs.io/en/latest/TrainingService/AdaptDLMode.html" target="_blank">Details here</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                        </div>
+                        <div class="up-card-title">
+                            AAAI 2021 Tutorial
+                        </div>
+                        <div class="up-card-subtitle">
+                            Simplifying and Automating Parallel Machine Learning via a Programmable and Composable Parallel ML System
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://sites.google.com/view/aaai-2021-tutorial-ah9/home" target="_blank">Tutorial Page</a></div>
                         </div>
                     </div>
                 </div>
