Adding pytorch ecosystem adaptdl update

--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/pytorch.png" alt="PyTorch logo">
+                        </div>
+                        <div class="up-card-title">
+                            AdaptDL is now featured on the PyTorch ecosystem! Blog post coming soon!
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://pytorch.org/ecosystem" target="_blank">PyTorch ecosystem</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
                         </div>
                         <div class="up-card-title">
