Adding KDD 2020 tutorial to updates

--- a/index.html
+++ b/index.html
@@ -172,6 +172,20 @@
                     </div>
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/kdd_2020_logo.png" alt="KDD logo">
+                        </div>
+                        <div class="up-card-title">
+                            KDD 2020
+                        </div>
+                        <div class="up-card-subtitle">
+                            Learning from All Types of Experiences: A Unifying Machine Learning Perspective
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://sites.google.com/view/kdd2020unified/home" target="_blank">Tutorial Page</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/nni.png" alt="NNI logo">
                         </div>
                         <div class="up-card-title">
