additional updates for aaai 2021 etc

--- a/index.html
+++ b/index.html
@@ -175,13 +175,41 @@
                             <img src="assets/updates/kdd_2020_logo.png" alt="KDD logo">
                         </div>
                         <div class="up-card-title">
-                            KDD 2020
+                            KDD 2020 Tutorial
                         </div>
                         <div class="up-card-subtitle">
                             Learning from All Types of Experiences: A Unifying Machine Learning Perspective
                         </div>
                         <div class="up-card-footer">
                             <div><a href="https://sites.google.com/view/kdd2020unified/home" target="_blank">Tutorial Page</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                        </div>
+                        <div class="up-card-title">
+                            AAAI 2021
+                        </div>
+                        <div class="up-card-subtitle">
+                            On Trustworthiness of ML Algorithms -- and implications in AI-driven healthcare
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://youtu.be/mJK53b150eM?t=26145" target="_blank">Watch the talk</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                        </div>
+                        <div class="up-card-title">
+                            AAAI 2021 Workshop
+                        </div>
+                        <div class="up-card-subtitle">
+                            Trustworthy AI for Healthcare
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://taih20.github.io/index.html" target="_blank">Workshop Page</a></div>
                         </div>
                     </div>
                     <div class="update-card">
