--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/nni.png" alt="NNI logo">
+                        </div>
+                        <div class="up-card-title">
+                            We have integrated AdaptDL with NNI for cost-effective hyperparameter tuning
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/cost-effective-hyper-parameter-tuning-using-adaptdl-with-nni-e55642888761" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/pytorch.png" alt="PyTorch logo">
                         </div>
                         <div class="up-card-title">
@@ -210,19 +223,6 @@
                         </div>
                         <div class="up-card-footer">
                             <div><a href="https://taih20.github.io/index.html" target="_blank">Workshop Page</a></div>
-                        </div>
-                    </div>
-                    <div class="update-card">
-                        <div class="up-card-logo">
-                            <img src="assets/updates/nni.png" alt="NNI logo">
-                        </div>
-                        <div class="up-card-title">
-                            We have integrated AdaptDL with NNI for cost-effective hyperparameter tuning
-                        </div>
-                        <div class="up-card-subtitle">
-                        </div>
-                        <div class="up-card-footer">
-                            <div><a href="https://nni.readthedocs.io/en/latest/TrainingService/AdaptDLMode.html" target="_blank">Details here</a></div>
                         </div>
                     </div>
                     <div class="update-card">
