adding research and tech section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <div class="header-nav">
                 <a href="#summary">CASL Learning</a>&#x2022;
                 <a href="#examples">Examples</a>&#x2022;
-                <a href="#updates">Updates</a>
+                <a href="#updates">Updates</a>&#x2022;
+                <a href="#research">Research and Technology</a>
                 <!-- Contact info TBD &#x2022;
                 <a href="#contact">Contact</a>
                 -->
@@ -120,7 +121,7 @@
             </section>
             <section id="updates" class="main-container">
                 <h2>CASL Updates</h2>
-                <h3>Latest updates, publications, and news about CASL</h3>
+                <h3>Latest updates and news about CASL</h3>
                 <div class="updates-container">
                     <!-- Example Markup (can vary) -->
                     <!--
@@ -197,34 +198,51 @@
                             <div><a href="https://sites.google.com/view/kdd2020unified/home" target="_blank">Tutorial Page</a></div>
                         </div>
                     </div>
+
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                            <img src="assets/updates/medium_logo.png" alt="Medium logo">
                         </div>
                         <div class="up-card-title">
-                            AAAI 2021
+                            Introducing Texar-PyTorch:
                         </div>
                         <div class="up-card-subtitle">
-                            On Trustworthiness of ML Algorithms -- and implications in AI-driven healthcare
+                            An ML Library Integrating the Best of TensorFlow into PyTorch
                         </div>
                         <div class="up-card-footer">
-                            <div><a href="https://youtu.be/mJK53b150eM?t=26145" target="_blank">Watch the talk</a></div>
+                            <div><a href="https://medium.com/@texar/introducing-texar-pytorch-an-ml-library-integrating-the-best-of-tensorflow-into-pytorch-d89c2c2d1d61" target="_blank">Blog Post</a></div>
                         </div>
                     </div>
-                    <div class="update-card">
-                        <div class="up-card-logo">
-                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                </div>
+            </section>
+            <div class="footer">
+                <div class="flex-row main-container">
+                    <section id="partners" class="main-container">
+                        <h2>Partners</h2>
+                        <div>
+                            <a href="https://petuum.com">
+                                <img src="assets/img/petuum.svg" alt="Petuum, Inc. logo" title="Petuum">
+                            </a>
                         </div>
-                        <div class="up-card-title">
-                            AAAI 2021 Workshop
+                        <div>
+                            <a href="https://www.cmu.edu">
+                                <img src="assets/img/cmu.svg" alt="Carnegie Mellon University">
+                            </a>
                         </div>
-                        <div class="up-card-subtitle">
-                            Trustworthy AI for Healthcare
+                    </section>
+                    <!-- Contact info TBD <section id="contact" class="main-container">
+                        <h2>Contact</h2>
+                        <div style="margin-top: 20px;">
+                            <a class="button" href="mailto:">Email Us</a>
                         </div>
-                        <div class="up-card-footer">
-                            <div><a href="https://taih20.github.io/index.html" target="_blank">Workshop Page</a></div>
-                        </div>
-                    </div>
+                    </section>
+                    -->
+                </div>
+            </div>
+            <section id="research" class="main-container">
+                <h2>Research and Technology</h2>
+                <br/>
+                <div class="updates-container">
                     <div class="update-card">
                         <div class="up-card-logo">
                             <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
@@ -316,16 +334,16 @@
                     </div>
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/medium_logo.png" alt="Medium logo">
+                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
                         </div>
                         <div class="up-card-title">
-                            Introducing Texar-PyTorch:
+                            AAAI 2021
                         </div>
                         <div class="up-card-subtitle">
-                            An ML Library Integrating the Best of TensorFlow into PyTorch
+                            On Trustworthiness of ML Algorithms -- and implications in AI-driven healthcare
                         </div>
                         <div class="up-card-footer">
-                            <div><a href="https://medium.com/@texar/introducing-texar-pytorch-an-ml-library-integrating-the-best-of-tensorflow-into-pytorch-d89c2c2d1d61" target="_blank">Blog Post</a></div>
+                            <div><a href="https://youtu.be/mJK53b150eM?t=26145" target="_blank">Watch the talk</a></div>
                         </div>
                     </div>
                     <div class="update-card">
@@ -344,30 +362,7 @@
                     </div>
                 </div>
             </section>
-            <div class="footer">
-                <div class="flex-row main-container">
-                    <section id="partners" class="main-container">
-                        <h2>Partners</h2>
-                        <div>
-                            <a href="https://petuum.com">
-                                <img src="assets/img/petuum.svg" alt="Petuum, Inc. logo" title="Petuum">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://www.cmu.edu">
-                                <img src="assets/img/cmu.svg" alt="Carnegie Mellon University">
-                            </a>
-                        </div>
-                    </section>
-                    <!-- Contact info TBD <section id="contact" class="main-container">
-                        <h2>Contact</h2>
-                        <div style="margin-top: 20px;">
-                            <a class="button" href="mailto:">Email Us</a>
-                        </div>
-                    </section>
-                    -->
-                </div>
-            </div>
+
         </main>
     </body>
 </html>
