Fix typo for AdaptDL

--- a/pages/casl-summary.html
+++ b/pages/casl-summary.html
@@ -55,7 +55,7 @@
             
                         <h2 class="card-button">
                         <a href="#">
-                            AdapdDL: About
+                            AdaptDL: About
                         </a>
                         <div class="card-description">
                             <span class="card-desc-close">&times;</span>
