--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/nni.png" alt="NNI logo">
+                            <img src="assets/updates/nni_adaptdl_logo.jpeg" alt="NNI AdaptDL logo">
                         </div>
                         <div class="up-card-title">
                             We have integrated AdaptDL with NNI for cost-effective hyperparameter tuning
@@ -159,7 +159,7 @@
                     </div>
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/pytorch.png" alt="PyTorch logo">
+                            <img src="assets/updates/adaptdl-text.png"><img src="assets/updates/pytorch.png" alt="PyTorch logo">
                         </div>
                         <div class="up-card-title">
                             AdaptDL is now featured on the PyTorch ecosystem! Blog post coming soon!
@@ -172,10 +172,10 @@
                     </div>
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
+                            <img src="assets/updates/adaptdl.png"> <img src="assets/updates/aaai-small_logo.jpg" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo"> <img src="assets/updates/autodist.png">
                         </div>
                         <div class="up-card-title">
-                            AAAI 2021 Tutorial
+                            AdaptDL and AutoDist Tutorial (AAAI 2021)
                         </div>
                         <div class="up-card-subtitle">
                             Simplifying and Automating Parallel Machine Learning via a Programmable and Composable Parallel ML System
@@ -186,10 +186,10 @@
                     </div>
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/kdd_2020_logo.png" alt="KDD logo">
+                            <img src="assets/updates/texar.png" alt="Texar logo"> <img src="assets/updates/kdd_2020_logo.png" alt="Texar logo, Forte logo, KDD logo"> <img src="assets/updates/forte-logo.png" alt="Forte logo">
                         </div>
                         <div class="up-card-title">
-                            KDD 2020 Tutorial
+                            Texar and Forte Tutorial <br/>(KDD 2020)
                         </div>
                         <div class="up-card-subtitle">
                             Learning from All Types of Experiences: A Unifying Machine Learning Perspective
@@ -201,7 +201,7 @@
 
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/medium_logo.png" alt="Medium logo">
+                            <img src="assets/updates/texar-text.png" alt="Texar logo"><img src="assets/updates/pytorch.png">
                         </div>
                         <div class="up-card-title">
                             Introducing Texar-PyTorch:
@@ -343,7 +343,7 @@
                             On Trustworthiness of ML Algorithms -- and implications in AI-driven healthcare
                         </div>
                         <div class="up-card-footer">
-                            <div><a href="https://youtu.be/mJK53b150eM?t=26145" target="_blank">Watch the talk</a></div>
+                            <div><a href="https://www.youtube.com/watch?v=vkKn84jJGiI&feature=youtu.be" target="_blank">Watch the talk</a></div>
                         </div>
                     </div>
                     <div class="update-card">
