update pytorch logo to include padding

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
                     <div class="update-card">
                         <div class="up-card-logo">
-                            <img src="assets/updates/texar-text.png" alt="Texar logo"><img src="assets/updates/pytorch.png">
+                            <img src="assets/updates/texar.png" alt="Texar logo"><img src="assets/updates/pytorch.png">
                         </div>
                         <div class="up-card-title">
                             Introducing Texar-PyTorch:
