adding Forte blog post to updates

--- a/index.html
+++ b/index.html
@@ -146,6 +146,19 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/forte-dark-text.png" alt="Forte logo">
+                        </div>
+                        <div class="up-card-title">
+                            Forte: Building Modular and Re-purposable NLP Pipelines
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/forte-building-modular-and-re-purposable-nlp-pipel[…]c5abbe9?source=friends_link&sk=fd233509e833569c8feb34092cc5efae" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/nni_adaptdl_logo.jpeg" alt="NNI AdaptDL logo">
                         </div>
                         <div class="up-card-title">
