quick update to include the OSS project cards from the old sit without having CSS conflicts

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                     <div class="hexagon"></div>
                     
                 </div>
+                <div class="oss-container">
+                    <iframe src="pages/casl-oss.html" title="CASL Open Source Projects"></iframe>
+                </div>
             </section>
             <section id="updates" class="main-container">
                 <h2>CASL Updates</h2>
