updating the adaptdl nni blog post link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="up-card-subtitle">
                         </div>
                         <div class="up-card-footer">
-                            <div><a href="https://medium.com/casl-project/cost-effective-hyper-parameter-tuning-using-adaptdl-with-nni-e55642888761" target="_blank">Blog Post</a></div>
+                            <div><a href="https://medium.com/casl-project/cost-effective-hyper-parameter-tuning-using-adaptdl-with-nni-e55642888761?source=friends_link&sk=6a49ab31df8b2a8c68767d6562ded903" target="_blank">Blog Post</a></div>
                         </div>
                     </div>
                     <div class="update-card">
