--- a/index.html
+++ b/index.html
@@ -149,6 +149,32 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/adaptdl-text.png"><img src="assets/updates/pytorch.png" alt="PyTorch logo">
+                        </div>
+                        <div class="up-card-title">
+                            Optimizing Elastic Deep Learning in GPU Clusters with AdaptDL for PyTorch
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/@Petuum/1d979b246d5d?source=friends_link&sk=88f8ed2772f3009b6d5d7a27b5030742" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/adaptdl-text.png"><img src="assets/updates/pytorch.png" alt="PyTorch logo">
+                        </div>
+                        <div class="up-card-title">
+                            AdaptDL is now featured on the PyTorch ecosystem!
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://pytorch.org/ecosystem" target="_blank">PyTorch ecosystem</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/forte-dark-text.png" alt="Forte logo">
                         </div>
                         <div class="up-card-title">
@@ -171,19 +197,6 @@
                         </div>
                         <div class="up-card-footer">
                             <div><a href="https://medium.com/casl-project/cost-effective-hyper-parameter-tuning-using-adaptdl-with-nni-e55642888761?source=friends_link&sk=6a49ab31df8b2a8c68767d6562ded903" target="_blank">Blog Post</a></div>
-                        </div>
-                    </div>
-                    <div class="update-card">
-                        <div class="up-card-logo">
-                            <img src="assets/updates/adaptdl-text.png"><img src="assets/updates/pytorch.png" alt="PyTorch logo">
-                        </div>
-                        <div class="up-card-title">
-                            AdaptDL is now featured on the PyTorch ecosystem! Blog post coming soon!
-                        </div>
-                        <div class="up-card-subtitle">
-                        </div>
-                        <div class="up-card-footer">
-                            <div><a href="https://pytorch.org/ecosystem" target="_blank">PyTorch ecosystem</a></div>
                         </div>
                     </div>
                     <div class="update-card">
