--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="pages/casl-summary-assets/assets/tuun.png">
+                        </div>
+                        <div class="up-card-title">
+                            Improving AI models through Automatic Data Augmentation using Tuun
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/improving-ai-models-through-automatic-data-augmentation-using-tuun-c205cb572224?source=friends_link&sk=ccd7c7a5085b8b94005ee57b68f7f157" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/adaptdl-text.png"><img src="assets/updates/pytorch.png" alt="PyTorch logo">
                         </div>
                         <div class="up-card-title">
