--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
                     -->
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/forte-dark-text.png" alt="Forte logo">
+                        </div>
+                        <div class="up-card-title">
+                            Building a Q&A System Part 1: Query Understanding in 18 lines
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/building-a-question-answering-system-part-1-query-understanding-in-18-lines-916110f9f2b2?source=friends_link&sk=1bb61463f52382c923de492333e9f0f6" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="pages/casl-summary-assets/assets/tuun.png">
                         </div>
                         <div class="up-card-title">
