--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
                             </div>
                         </div>
                     -->
+                   <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="pages/casl-summary-assets/assets/tuun.png" alt="Tuun logo">
+                        </div>
+                        <div class="up-card-title">
+                            Introducing Tuun, an Open Source System for Hyperparameter Tuning via Uncertainty Modeling
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/introducing-tuun-an-open-source-system-for-hyperparameter-tuning-via-uncertainty-modeling-4502f3566aeb?source=friends_link&sk=0975571f56f1fbb9db0407dc708422ba" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>              
                     <div class="update-card">
                         <div class="up-card-logo">
                             <img src="assets/updates/forte-dark-text.png" alt="Forte logo">
